--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,35 @@
+@keyframes animation {
+    from {
+        background-color: #FFF;
+    }
+    to{
+        background-color: darkorange;
+        border-radius: 10px;
+    }
+}
+
+@keyframes cardAnimation{
+    from{
+        background-color: #FFF;
+    }to{
+        background-color: chocolate;
+        border: 1px solid black;
+        border-radius: 15px;
+    }
+}
+
+
+.nav{
+    width: 50%;
+    margin: 0 auto;
+    margin-top: 10px;
+    animation-name: animation;
+    animation-duration: 4s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
 .nav ul li a{
     color: #FFF;
     font-size: 1.4rem;
@@ -20,4 +52,8 @@
     width: 50%;
     margin: 0 auto;
     margin-bottom: 50px;
+    animation-name: cardAnimation;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
