--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,6 @@
         border-radius: 10px;
     }
 }
-
 @keyframes cardAnimation{
     from{
         background-color: #FFF;
@@ -17,8 +16,15 @@
         border-radius: 15px;
     }
 }
-
-
+@keyframes btn{
+    from{
+        background-color: blue;
+        color: #FFF;
+    }to{
+        background-color: gold;
+        color: black;
+    }
+}
 .nav{
     width: 50%;
     margin: 0 auto;
@@ -29,7 +35,6 @@
     animation-iteration-count: infinite;
     animation-timing-function: linear;
 }
-
 .nav ul li a{
     color: #FFF;
     font-size: 1.4rem;
@@ -37,8 +42,10 @@
 .container-fluid{
     display: flex;
     width: 100%;
+    margin-top: 50px;
 }
 .container{
+    border-radius: 20px;
     padding-top: 50px;
     margin: 0 auto;
     text-align: left;
@@ -54,6 +61,13 @@
     margin-bottom: 50px;
     animation-name: cardAnimation;
     animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+.btn{
+    animation: btn;
+    animation-duration: 10s;
+    animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
     animation-direction: alternate;
 }
