--- a/css/styles.css
+++ b/css/styles.css
@@ -1,89 +1,11 @@
-@keyframes animation {
-    from {
-        background-color: #FFF;
-        color: blue;
-    }to{
-        background-color: darkorange;
-        border-radius: 10px;
-        color: black;
-    }
-}
-@keyframes cardAnimation{
-    from{
-        background-color: #FFF;
-    }to{
-        background-color: chocolate;
-        border: 1px solid black;
-        border-radius: 15px;
-    }
-}
-@keyframes btn{
-    from{
-        background-color: blue;
-        color: #FFF;
-    }to{
-        background-color: gold;
-        color: black;
-    }
-}
-.nav{
-    width: 50%;
-    margin: 0 auto;
-    margin-top: 10px;
-    animation-name: animation;
-    animation-duration: 5s;
-    animation-direction: alternate;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    font-size: 1.2rem;
+*{
+    margin: 0;
+    padding: 0;
 }
 .container-fluid{
-    display: flex;
-    width: 100%;
-    margin-top: 50px;
-}
-.container{
-    border-radius: 20px;
-    padding-top: 50px;
-    margin: 0 auto;
-    text-align: left;
-    text-wrap: wrap;
-    perspective: 1000px;
-}
-.container img{
-    width: 400px;
-    height: 400px;
+    margin-bottom: 150px;
 }
 .card{
-    width: 50%;
+    width: 70%;
     margin: 0 auto;
-    margin-bottom: 50px;
-    animation-name: cardAnimation;
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-}
-@keyframes cardRotate {
-    from{
-    transform: translateY(-30px) rotateX(20deg);
-    box-shadow: 0px 20px 30px rgba(5, 206, 38, 0.89);
-    }to{
-    transform: translateY(-10px) rotateX(10deg);
-    box-shadow: 0px 20px 30px rgba(4, 182, 236, 0.89);        
-    }
-}
-.card:hover{
-    animation-name: cardRotate;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-duration: 10s;
-    z-index: 100;
-}
-.btn{
-    animation: btn;
-    animation-duration: 10s;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
 }
