--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,11 @@
     color: #FFF;
 }
 .nav-link{
-    transition: border-bottom 4s linear 4s;
+    transition: border-bottom 4s ease-in 4s;
 }
 .nav-link:hover{
-    border-bottom: 2px solid black;
-}
-.nav{
-    margin-top: 10px;
+    color: cornflowerblue;
+    font-weight: 600;
+    border-bottom: 1px solid black;
+    cursor: alias;
 }
